--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,148 @@
-numpy==1.21.2
-opencv-python==4.5.3.56
-streamlit==1.17.0
+absl-py==1.4.0
+aiohttp==3.8.6
+aiosignal==1.3.1
+altair==5.1.1
+annotated-types==0.6.0
+anyio==3.7.1
+asgiref==3.7.2
+asttokens==2.4.1
+astunparse==1.6.3
+async-timeout==4.0.3
+attrs==23.1.0
+backcall==0.2.0
+blinker==1.6.2
+cachetools==5.3.1
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.2.0
+click==8.1.7
+colorama==0.4.6
+comm==0.1.4
+contourpy==1.1.0
+cycler==0.11.0
+dataclasses-json==0.6.1
+debugpy==1.8.0
+decorator==5.1.1
+Django==4.2.5
+docopt==0.6.2
+executing==2.0.1
+filelock==3.13.0
+flatbuffers==23.5.26
+fonttools==4.42.1
+frozenlist==1.4.0
+fsspec==2023.10.0
+gast==0.4.0
+gitdb==4.0.10
+GitPython==3.1.36
+google-auth==2.23.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+greenlet==3.0.1
+grpcio==1.58.0
+h5py==3.9.0
+huggingface-hub==0.17.3
+idna==3.4
+imageio==2.31.3
+importlib-metadata==6.8.0
+ipykernel==6.26.0
+ipython==8.16.1
+jedi==0.19.1
+Jinja2==3.1.2
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+jupyter_client==8.5.0
+jupyter_core==5.4.0
+keras==2.13.1
+kiwisolver==1.4.5
+langchain==0.0.325
+langsmith==0.0.53
+libclang==16.0.6
+Markdown==3.4.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+matplotlib==3.7.3
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mediapipe==0.10.7
+multidict==6.0.4
+mypy-extensions==1.0.0
+nest-asyncio==1.5.8
+numpy==1.24.3
+oauthlib==3.2.2
+opencv-contrib-python==4.8.1.78
+opencv-python==4.8.1.78
+opt-einsum==3.3.0
+packaging==23.1
+pandas==2.1.0
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.5.0
+pipreqs==0.4.13
+platformdirs==3.11.0
+prompt-toolkit==3.0.39
+protobuf==3.20.3
+psutil==5.9.6
+pure-eval==0.2.2
+pyarrow==13.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydantic==2.4.2
+pydantic_core==2.10.1
+pydeck==0.8.0
+Pygments==2.16.1
+Pympler==1.0.1
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+pytz-deprecation-shim==0.1.0.post0
+pywin32==306
+PyYAML==6.0.1
+pyzmq==25.1.1
+referencing==0.30.2
+regex==2023.10.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+rich==13.5.2
+rpds-py==0.10.2
+rsa==4.9
+safetensors==0.4.0
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+sounddevice==0.4.6
+SQLAlchemy==2.0.22
+sqlparse==0.4.4
+stack-data==0.6.3
+streamlit==1.26.0
+tenacity==8.2.3
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-intel==2.13.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+tokenizers==0.14.1
+toml==0.10.2
+toolz==0.12.0
+tornado==6.3.3
+tqdm==4.66.1
+traitlets==5.12.0
+transformers==4.34.1
+typing-inspect==0.9.0
+typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==4.3.1
+urllib3==1.26.16
+validators==0.22.0
+watchdog==3.0.0
+wcwidth==0.2.8
+Werkzeug==2.3.7
+wrapt==1.15.0
+yarg==0.1.9
+yarl==1.9.2
+zipp==3.16.2
